--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-spring:
-  data:
-    redis:
-      database: 0
-      host: ${REDIS_HOST}
-      post: ${REDIS_PORT}
-      password: ${REDIS_PASSWORD}
-      timeout: 60000
 jwt:
   key: ${JWT_SECRET_KEY}
   access-token-expiration: 3600000
   refresh-token-expiration: 86400000
+
+amazon:
+  aws:
+    region: ${AWS_REGION}
+    accessKey: ${AWS_ACCESS_KEY}
+    secretKey: ${AWS_SECRET_KEY}
