--- a/pom.xml
+++ b/pom.xml
@@ -66,14 +66,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-dynamodb</artifactId>
-			<version>1.11.64</version>
-		</dependency>
-		<dependency>
-			<groupId>io.github.boostchicken</groupId>
-			<artifactId>spring-data-dynamodb</artifactId>
-			<version>5.2.1</version>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>dynamodb-enhanced</artifactId>
+			<version>2.23.12</version>
 		</dependency>
 	</dependencies>
 
